yaml/node-app-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app
      version: v1
  template:
    metadata:
      labels:
        app: node-app
        version: v1
    spec:
      containers:
      - name: node-app
        image: adiindia/node-app:v1
        ports:
        - containerPort: 3000
